Changes to code and structure
For tutoring

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <!-- Main images -->
       <div class="img-container">
         <div class="eth-container">
-          <div class="overlay"><img class="eye" src="images/icon-view.svg" alt="view"></div>
-          <img class="eth-img" src="images/image-equilibrium.jpg" alt="ethimge">
+          <!--<div class="overlay"><img class="eye" src="images/icon-view.svg" alt="view"></div>-->
+          <div class="eth-img">
+            <img src="images/image-equilibrium.jpg" alt="ethimge">
+          </div>
         </div>
 
       </div>
